# combo-dl

./: .gitattributes  .gitignore  .yamllint  DEVELOPMENT.md  LICENSE  Makefile  README.md  SLURM_SETUP.md  __init__.py  a-graph-nn.ipynb  cayley_ilp_tasks.json  custom_env_tutorial.py  custom_hadamard_model.py  dsrg_open_cases.csv  dsrg_parameters.csv  dsrg_parameters.csv.bak  dsrg_parameters.xlsx  dsrg_params_tvalid.csv  dsrg_unknown-21-30.params  eigenvalue_environment.py  environment.yml  graph_env_prototype.py  gym_tutorial.py  gymnasium_tutorial.ipynb  hadamard_custom_example.py  hadamard_env.py  larger_params.csv  main.py  new_parameters.csv  pyproject.toml  rrhc_export.txt  rrhc_none_ilp_tasks.json  rrhc_tasks.json  rrhc_tasks_recovery.json  run_palay_large_model.sbatch  second_list.csv  setup_jupyter_git.sh  srg_open_cases.csv  t_valid_scatter_data.csv
.cursor/rules/: algorithm-development.mdc  architecture-patterns.mdc  hydra-configuration.mdc  model-development.mdc  problem-development.mdc  python-conventions.mdc  testing-conventions.mdc
.github/workflows/: ci.yml
algorithms/: algorithm.py  base_algorithm.py  deep_cross_entropy.py
config/: base_config.yaml  config.yaml  palay_gcnn.yaml  palay_large_model.yaml  peterson.yaml  really_large_model.yaml  slurm-test.yaml  srg_config.yaml  srg_ff_general.yaml  srg_search_up_to_16.yaml  wagner_corollary_2_1.yaml  wagner_replication.py
config/algorithm/: wagner_deep_cross_entropy.yaml
config/hydra/launcher/: HPC_2HRS_GPU.yaml  submitit_slurm.yaml
config/launcher/: slurm.yaml
config/logger/: both.yaml  console.yaml  wandb.yaml
config/model/: wagner.yaml
config/problem/: wagner_corollary_2_1.yaml
config/slurm/: really_large_model.yaml  run_21_10_3_6.sbatch  run_palay_large_model.sbatch
config_backup/: config.yaml
config_backup/model/: wagner.yaml
config_backup/problem/: wagner_corollary_2_1.yaml
configs/: conway_dce.yaml  dce_srg_bench.yaml  laplacian_spectral_bounds.yaml  mlp_dce.yaml  survivor_test.yaml  survivor_test_smaller_graph.yaml
data/: dataset.ipynb  dsrg_parameters.csv  graphs.csv  group_param.csv  groups.csv  parameters.csv  schema.md  schema.sql  searches.csv
data/dpds/: n006.csv  n008.csv  n010.csv  n012.csv  n014.csv  n016.csv  n018.csv  n020.csv  n021.csv  n022.csv  n024.csv  n026.csv  n027.csv  n028.csv  n030.csv  n034.csv  n036.csv  n038.csv  n039.csv  n040.csv  n042.csv  n044.csv  n054.csv  n056.csv  n057.csv  n064.csv  n072.csv  n080.csv  n081.csv  n084.csv  n096.csv  n098.csv  n100.csv  n108.csv
exhaustive_search/: generate.py  search.py
experiment_logger/: __init__.py  console_logger.py  experiment_logger.py  logger.py
experiments/: edge_transformer.py  extremal_genetic_search.py  guided_genetic_search.py  laplacian_spectral_bounds.py  mlp_dce.py  ramsey_numbers.py  srg_rl.py  train_srg_minimal_real.py
ilp/: __main__.py  cayley_dsrg.py
models/: __init__.py  protocols.py  wagner_model.py
naive computer-generated approach/: basic_rl.ipynb  pds_set_transformer_ppo.py  test.py
notebooks/: analyze_36_10.py  aut_group_analysis.py  cayley_results.py  laplacian_spectral_bounds.ipynb  pyrightconfig.json  srg_diagnostic.ipynb  test-graph-nn.ipynb  violating_graph_adjacency.npy  violating_graph_iter_266_score_0.0459.graphml  viz_single_graph.py
old/data/: dataset.ipynb
old/rl_environment/: a-graph-nn.ipynb  eigenvalue_environment.py  graph_env_prototype.py
old/tutorials/: custom_env_tutorial.py  gym_tutorial.py
problems/: __init__.py  base_problem.py  edge_utils.py  strongly_regular_graphs.py  wagner_corollary_2_1.py
rl_environment/: eigenvalue_environment.py
rrhc/: Cargo.toml  README.md
rrhc/src/: group.rs  main.rs  rrhc.rs
scripts/: aggregate_bench.py  build_database.py  cayley_array.sh  cayley_ilp_aggregate.py  cayley_ilp_batch1_array.sh  cayley_ilp_cluster1_array.sh  cayley_ilp_dsrg_array.sh  cayley_ilp_submit.py  cayley_ilp_worker.py  dce_bench_array.sh  export_cayley_data.py  filter_open.sh  gen_dsrg_parameters.py  gen_tvalid_csv.py  hobart_table_scraper.py  ingest_rrhc_out.py  plot_dce_benchmark.py  plot_dce_training_curves.py  plot_ilp_benchmark.py  rrhc_array.sh  rrhc_export.py  rrhc_n64_analyze.py  rrhc_n64_array.sh  rrhc_print_found.py  rrhc_submit.py  rrhc_sweep.py  rrhc_test.sh  run_local.py  run_local.sh  run_mlp_srg.py  run_srg_under_16.sh  search_cayley_srg.py  smoke_test_mlp_srg.py  srg_bench_array.sh  srg_bench_exp_lex_array.sh  srg_bench_fix_exp_array.sh  srg_bench_fix_hybrid_array.sh  srg_bench_fix_lex_array.sh  srg_bench_lex_array.sh  srg_bench_no_sym_array.sh  (+17 more)
scripts/slurm/: batch-submission.md  rrhc.sh
src/: random_restart.g
src/cayley_search/: analysis.py  generate.py  group_tables.g  plot_t_valid.py  run_single.py
src/combo_dl/: __init__.py  deep_cross_entropy.py  edge_swap_env.py  main.py  srg_rl.py  strongly_regular_graphs_problem.py  wagner_corollary_2_1_problem.py
src/combo_dl/algorithms/: __init__.py  base_algorithm.py  deep_cross_entropy.py  edge_swap_env.py  gym_env_trainer.py  wagner_curriculum_learning.py
src/combo_dl/environments/: __init__.py  edge_swap_env.py
src/ilp/: __main__.py  analyze.py  base-dsrg.py  cayley_graphs.g  dag_lex_check.py  dsrg.py  enumerating-bases.py  gap_runner.py  relaxed-dsrg.py  run_parallel.sh  sat.py  srg.py  srg_params_open.csv  sweep.py  sweep_results.json  verify_new_dsrgs.g
src/srg_search/: cli.py  random_restart.g
src/thesis/: main.py
tests/: __init__.py  test_basic_imports.py  test_edge_swap_env.py  test_graph_tools.py  test_regular_edge_swap_env.py  test_wagner_corollary_2_1.py
tests/models/: __init__.py  test_ff_model.py  test_gcnn.py
thesis/: main.py
thesis/algorithms/: __init__.py  algorithm.py  deep_cross_entropy.py
thesis/core/: __init__.py  algorithm.py  problem.py  protocols.py
thesis/experiment_logger/: logger.py
thesis/models/: __init__.py  wagner_model.py
thesis/problems/: __init__.py  wagner_corollary_2_1.py
tutorials/: gymnasium_tutorial.ipynb
wagner_replication/: deep_cross_entropy.py  model.py  training_env.py  wagner_model.py
(+99 files in other folders)
