[project]
name = "combo-dl"
version = "0.1.0"
description = "Graph optimization using deep learning"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    {name = "James Elmore", email = "email@jameselmore.org"},
]
dependencies = [
    "gurobipy>=13.0.1",
    "gymnasium>=1.2.1",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "ipykernel>=6.30.1",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "omegaconf>=2.3.0",
    "pulp>=3.3.0",
    "pydantic>=2.6,<2.9",
    "python-sat>=1.8.dev30",
    "scipy>=1.16.2",
    "stable-baselines3[extra]>=2.7.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.404",
    "ruff>=0.12.10",
    "nbstripout>=0.7.0",
    "nbqa>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 99
target-version = "py313"
src = ["src"]
preview = true  # Enable preview features for DOC rules
exclude = [
    "old/**",
    "config_backup/**",
    "hydra_outputs/**",
    "wandb/**",
    ".venv/**",
    "notebooks/**",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (remove commented code)
    "PL",  # pylint
    "RUF", # ruff-specific rules
    "D",   # pydocstyle - docstring conventions
    "DOC", # flake8-docstrings
]

ignore = [
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many local variables
    "PLR0915", # Too many statements
    "PLR0917", # Too many local variables
    "PLR2004", # Magic value used in comparison
    "PLR6104", # Consider using `x += y` instead of `x = x + y`
    "N806",    # Variable names should be lowercase
    "N812",    # Lowercase imported as non-lowercase
    "RET504",  # Unnecessary assign
    
    # Docstring exceptions for private methods and __init__
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class (allow for simple classes)
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files (common for re-exports)
"__init__.py" = ["F401"]

# Test file specific ignores
"**/test_*.py" = [
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "PLR6301", # Method could be a function
    "PLC2701", # Private name import
]

"experiments/**/*.py" = [
    "D",       # All pydocstyle rules (docstring conventions)
    "DOC",     # All flake8-docstrings rules
    "PLR6301", # Method could be a function
    "PLR6201", # Use set literal for membership
    "F841",    # Local variable assigned but never used
]

"notebooks/**/*.py" = [
    "D",       # All pydocstyle rules (docstring conventions)
    "DOC",     # All flake8-docstrings rules
    "PLR6301", # Method could be a function
    "PLR6201", # Use set literal for membership
    "F841",    # Local variable assigned but never used
]

[tool.ruff.lint.isort]
known-first-party = ["combo_dl"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

exclude = [
    "old/**",
    "config_backup/**",
    "hydra_outputs/**",
    "wandb/**",
    ".venv/**",
]

[tool.pyright]
include = ["src/combo_dl/", "notebooks/", "experiments/"]
exclude = ["**/__pycache__", "**/.venv", "**/venv"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = "error"
reportImplicitOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportUnsafeMultipleInheritance = "warning"

# Use library code for better type analysis
useLibraryCodeForTypes = true

# Research/experimental code settings (notebooks and experiments)
[tool.pyright.notebook]
# More lenient type checking for research code
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportAttributeAccessIssue = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::pydantic._internal._generate_schema.UnsupportedFieldAttributeWarning",
]
