[package]
name = "rrhc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rayon = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"


[profile.profiling]
inherits = "release"
debug = true
split-debuginfo = "packed"   # produce a .dSYM bundle so samply can symbolicate
